make reporter influx 0.10 compatible